bin/release/log.txt
In file included from include/anonymous/container/module.cppm:59:
In file included from include/anonymous/container/array/array.hpp:3:
[1minclude/anonymous/container/array/array_class/array_1d.hpp:11:76: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'string_type'[0m
   11 |         static_assert ( default_initializable<type> and ( movable<type> or string_type<type> ) );[0m
      | [0;1;32m                                                                           ^
[0m[1minclude/anonymous/container/array/array_class/array_1d.hpp:104:80: [0m[0;1;31merror: [0m[1mfriend declaration of 'tuple_upper' does not match any declaration in namespace 'anonymous::detail'[0m
  104 |         template < class type2, int dim2, class device2 > friend class detail::tuple_upper;[0m
      | [0;1;32m                                                                       ~~~~~~~~^
[0mIn file included from include/anonymous/container/module.cppm:59:
In file included from include/anonymous/container/array/array.hpp:4:
[1minclude/anonymous/container/array/array_class/array_nd.hpp:15:76: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'string_type'[0m
   15 |         static_assert ( default_initializable<type> and ( movable<type> or string_type<type> ) );[0m
      | [0;1;32m                                                                           ^
[0m[1minclude/anonymous/container/array/array_class/array_nd.hpp:110:80: [0m[0;1;31merror: [0m[1mfriend declaration of 'tuple_upper' does not match any declaration in namespace 'anonymous::detail'[0m
  110 |         template < class type2, int dim2, class device2 > friend class detail::tuple_upper;[0m
      | [0;1;32m                                                                       ~~~~~~~~^
[0mIn file included from include/anonymous/container/module.cppm:59:
In file included from include/anonymous/container/array/array.hpp:5:
[1minclude/anonymous/container/array/array_class/array_xd.hpp:12:76: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'string_type'[0m
   12 |         static_assert ( default_initializable<type> and ( movable<type> or string_type<type> ) );[0m
      | [0;1;32m                                                                           ^
[0m[1minclude/anonymous/container/array/array_class/array_xd.hpp:107:80: [0m[0;1;31merror: [0m[1mfriend declaration of 'tuple_upper' does not match any declaration in namespace 'anonymous::detail'[0m
  107 |         template < class type2, int dim2, class device2 > friend class detail::tuple_upper;[0m
      | [0;1;32m                                                                       ~~~~~~~~^
[0mIn file included from include/anonymous/container/module.cppm:59:
In file included from include/anonymous/container/array/array.hpp:3:
[1minclude/anonymous/container/array/array_class/array_1d.hpp:6:21: [0m[0;1;31merror: [0m[1mimplicit instantiation of undefined template 'anonymous::detail::array_upper<int, 1, anonymous::cpu>'[0m
    6 |             private detail::array_upper<type,1,device>, // (Dyanmic extends) Manages the upper-dimension host arrays. Only transposable.[0m
      | [0;1;32m                    ^
[0m[1minclude/anonymous/container/array/array_base/array_algo_1d.cpp:79:59: [0m[0;1;36mnote: [0min instantiation of template class 'anonymous::array<int>' requested here[0m
   79 | constexpr array<int> array_algo<container,type,1,device>::adjacent_where ( ) const[0m
      | [0;1;32m                                                          ^
[0m[1minclude/anonymous/container/array/array_class/detail/array_decl.hpp:16:11: [0m[0;1;36mnote: [0mtemplate is declared here[0m
   16 |     class array_upper;[0m
      | [0;1;32m          ^
[0mIn file included from include/anonymous/container/module.cppm:59:
In file included from include/anonymous/container/array/array.hpp:3:
[1minclude/anonymous/container/array/array_class/array_1d.hpp:104:80: [0m[0;1;31merror: [0m[1mno class named 'tuple_upper' in namespace 'anonymous::detail'[0m
  104 |         template < class type2, int dim2, class device2 > friend class detail::tuple_upper;[0m
      | [0;1;32m                                                                       ~~~~~~~~^
[0m8 errors generated.
